Continue laying out webpage with CSS
Play around with CSS flex options to try to create a stable & properly
formatted page; need to continue tweaking flex settings to make it more
responsive & scalable

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="header">
-        <h1>pointillist practice</h1>
+        <h1>pointillist etch-a-sketch</h1>
         <h3>recreate the earliest masterpieces of pixel art</h3>
     </div>
 
