Standardize size of equivalent L/R elements
Continue tweaking CSS to maintain uniform sizing for L/R elements,
add placeholder REFRESH button to test appearance of 'options' section,
improve flex performance when window is small

--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
 
     <div class="header">
         <h1>pointillist etch-a-sketch</h1>
-        <h3>recreate the earliest masterpieces of pixel art</h3>
+        <h3>recreate pre-internet masterpieces of pixel art</h3>
     </div>
 
     <div class="main">
 
         <div class="art">
 
-            <div class="art-title">Georges Seurat, <span class="work-title">A Sunday Afternoon on the Island of La Grande Jatte</span>, 1884-1886, oil on canvas.</div>
+            <div class="title art-title">Georges Seurat, <span class="work-title">A Sunday Afternoon on the Island of La Grande Jatte</span>, 1884-1886, oil on canvas.</div>
 
             <div class="art-container">
                 <img src="img/la-grande-jatte.jpg">
             </div>
 
-            <div class="art-options"></div>
+            <div class="options art-options"><button class="refresh">load new artwork</button></div>
 
         </div>
 
         <div class="sketch">
 
-            <div class="sketch-title">your version:</div>
+            <div class="title sketch-title">your version:</div>
 
-            <div class="sketch-container"></div>
+            <div class="sketch-container">
+                <div class="sketch-field"></div>
+            </div>
 
-            <div class="sketch-options"></div>
+            <div class="options sketch-options">OPTIONS GO HERE</div>
 
         </div>
 
