Use Javascript to add dynamic grid to sketch field
Take user input (for now just gathering this with a prompt) for any
number x and use a loop to create a grid of size x by x within the
sketch field container

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <title>pointillist etch-a-sketch | sean stephen brian</title>
     <link rel="stylesheet" href="style.css">
-    <script src="etch.js"></script>
+    <script src="etch.js" defer></script>
 </head>
 
 <body>
 
     <div class="header">
         <h1>pointillist etch-a-sketch</h1>
-        <h3>recreate pre-internet masterpieces of pixel art</h3>
+        <h3>recreate masterpieces of pre-internet pixel art</h3>
     </div>
 
     <div class="main">
