Add color picker
Create HTML element to gather user color selection, then use event
listener to adjust the 'color' variable with the user's selection each
time it changes; default value is green tone similar to Seurat painting

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
                 <div class="sketch-field"></div>
             </div>
 
-            <div class="options sketch-options">OPTIONS GO HERE</div>
+            <div class="options sketch-options">
+                <div class="color-picker-section">
+                    <span id="color">color:</span>
+                    <input type="color" value="#458245" id="color-picker">
+                </div>
+            </div>
 
         </div>
 
