--- a/index.html
+++ b/index.html
@@ -38,10 +38,17 @@
             </div>
 
             <div class="options sketch-options">
+
                 <div class="color-picker-section">
                     <span id="color">color:</span>
                     <input type="color" value="#458245" id="color-picker">
                 </div>
+
+                <div class="pixel-picker-section">
+                    <span id="pixel">pixel size:</span>
+                    <input type="range" min="1" max="50" value="10" class="slider" id="pixel-picker">
+                </div>
+
             </div>
 
         </div>
