--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="pixel-picker-section">
-                    <span id="pixel">pixel size:</span>
+                    <span id="pixel"># of dots:</span>
                     <input type="range" min="1" max="50" value="10" class="slider" id="pixel-picker">
                 </div>
 
