Begin work on random image selector
Set up architecture for new function 'pickArt' to randomly select one of
ten art images; need to download/edit image files and write captions

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
         <div class="art">
 
-            <div class="title art-title">Georges Seurat, <span style="font-style: italic;">A Sunday Afternoon on the Island of La Grande Jatte</span>, 1884-1886, oil on canvas.</div>
+            <div class="title art-title"></div>
 
             <div class="art-container">
-                <img src="img/la-grande-jatte.jpg">
+                <img class="art-img" src="">
             </div>
 
             <div class="options art-options"><button class="refresh">load new masterpiece</button></div>
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="pixel-picker-option">
-                    <span class="option-text" id="pixel"># of pixels (resets grid!):</span>
+                    <span class="option-text" id="pixel"># of pixels (erases sketch!):</span>
                     <input type="range" min="1" max="75" value="37" class="slider" id="pixel-picker">
                 </div>
 
