Finalize art images and make final design tweaks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="header">
         <h1>pointillist etch-a-sketch</h1>
-        <h3>recreate masterpieces of pre-internet pixel art</h3>
+        <h3>digitally recreate masterpieces of non-digital pixel art</h3>
     </div>
 
     <div class="main">
@@ -25,7 +25,7 @@
                 <img class="art-img" src="">
             </div>
 
-            <div class="options art-options"><button class="refresh">load new masterpiece</button></div>
+            <div class="options art-options"><button class="new-masterpiece">load new masterpiece</button></div>
 
         </div>
 
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="pixel-picker-option">
-                    <span class="option-text" id="pixel"># of pixels (erases sketch!):</span>
+                    <span class="option-text" id="pixel"># of pixels (<strong>erases sketch!</strong>):</span>
                     <input type="range" min="1" max="75" value="37" class="slider" id="pixel-picker">
                 </div>
 
