Add drop shadow to art/sketch containers + header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="title art-title"></div>
 
-            <div class="art-container">
+            <div class="art-container container">
                 <img class="art-img" src="">
             </div>
 
@@ -33,7 +33,7 @@
 
             <div class="title sketch-title">your version:</div>
 
-            <div class="sketch-container">
+            <div class="sketch-container container">
                 <div class="sketch-field"></div>
             </div>
 
