--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>pointillist etch-a-sketch | sean stephen brian</title>
     <link rel="stylesheet" href="style.css">
     <script src="etch.js" defer></script>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
